# SomAlwaysCleaner

./: .gitignore  CMakeLists.txt  README.md  SomAlwaysCleaner.sln  ToDoList(T3).md
Configurator/: Configurator.cpp  Configurator.vcxproj  Configurator.vcxproj.filters  config.json  vcpkg.json
Configurator/Configs/: ConfigSetup.cpp  ConfigSetup.h
Configurator/Json/: Additionals.cpp  Additionals.h  Json.cpp  Json.h
SomAlwaysCleaner/: SomAlwaysCleaner.cpp  SomAlwaysCleaner.vcxproj  SomAlwaysCleaner.vcxproj.filters  config.json  vcpkg-configuration.json
SomAlwaysCleaner/Deleters/: Deleter.cpp  Deleter.h
SomAlwaysCleaner/Files/: Files.cpp  Files.h
SomAlwaysCleaner/Notifications/: Notification.cpp  Notification.h
SomAlwaysCleaner/Time/: Time.cpp  Time.h
SomAlwaysCleaner/resources/: message.txt
